--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 MONGO = mongodb+srv://shamil:shamil@cluster0.tlgmzlq.mongodb.net/booking?retryWrites=true&w=majority
+JWT = 96xIzb9SAuDvgSDjgp4jZZh0NRNuG7at0rpRNwrhoyQ=
